# Simulation-of-electron-motion-in-a-cylindrical-capacitor

./: .gitignore  CMakeLists.txt
.github/workflows/: testsForProject.yml
src/: CMakeLists.txt
src/Graphics/: CMakeLists.txt
src/Graphics/GraphicsObjects/: CMakeLists.txt  GraphicsObject.h  IGraphicsObject.h
src/Graphics/GraphicsObjects/Charts/: ChartForYx.cpp  ChartForYx.h
src/Graphics/GraphicsObjects/Charts/Ay/: ChartForAy.cpp  ChartForAy.h
src/Graphics/GraphicsObjects/Charts/Vy/: ChartForVy.cpp  ChartForVy.h
src/Graphics/GraphicsObjects/Charts/Xy/: ChartForYx.cpp  ChartForYx.h
src/Graphics/GraphicsObjects/Charts/Yt/: ChartForYt.cpp  ChartForYt.h
src/Graphics/GraphicsObjects/Models/: Model.cpp  Model.h
src/Graphics/Window/: CMakeLists.txt  WindowGraphic.cpp  WindowGraphic.h
src/Mapper/: CMakeLists.txt  mapper.cpp
src/PhysicalCalculations/: CMakeLists.txt  potential.cpp  potential.h
tests/: CMakeLists.txt
tests/testsForCharts/: CMakeLists.txt
tests/testsForCharts/testForChartAy/: CMakeLists.txt  testChartAy.cpp
tests/testsForCharts/testForChartOfYx/: CMakeLists.txt  testChartYx.cpp
tests/testsForCharts/testForChartVy/: CMakeLists.txt  testChartVy.cpp
tests/testsForCharts/testForChartYt/: CMakeLists.txt  testChartYt.cpp
tests/testsForGraphics/: CMakeLists.txt  testForWindowGraphic.cpp
tests/testsForPhysicalCalculations/: CMakeLists.txt  testForMinimumPotential.cpp
